# selfstorage

./: .gitignore  README.md  pyproject.toml
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/management/commands/: notify_rentals.py
accounts/migrations/: 0001_initial.py  0002_profile_address.py
client/: admin.py  models.py
consultation/: admin.py
main/: admin.py  models.py  urls.py  views.py
main/migrations/: 0001_initial.py
promotions/: admin.py  models.py  shortio.py
promotions/migrations/: 0001_initial.py  0002_shortcutlink.py
rent/: admin.py  models.py  urls.py  views.py
rent/migrations/: 0001_initial.py  0002_storeditem.py  0003_rent_delivery_required_rent_measurements_required.py
selfstorage/: settings.py  urls.py
services/: admin.py  models.py
services/migrations/: 0001_initial.py
shortlinks/: admin.py  models.py  urls.py  views.py
shortlinks/migrations/: 0001_initial.py
templates/: boxes.html  faq.html  index.html  login.html  my-rent-empty.html  my-rent.html
warehouses/: admin.py  models.py  urls.py  views.py
warehouses/migrations/: 0001_initial.py
